added missing files

--- a/trunk/Auslink/Auslink.Web.New/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Members/CurrentUnitholders.cshtml
@@ -28,52 +28,15 @@
     <h3>Distributions</h3>
     
     <p class="small-margin-bottom">
-        The forecast distribution for the 2016 financial year is shown below:
+        The forecast distribution for the 2016 and 2017 financial years is shown below:
     </p>
 
     <ul class="table two-column">
         <li>
-            <p>FY 2016:</p>
-            <p>10.6 cents per unit</p>
+            <p>FY 2016:<br />FY 2017:</p>
+            <p>11 cents per unit<br />11.3 cents per unit</p>
         </li>
     </ul>
-    
-    <p class="small-margin-bottom">
-        Details of the next distribution to be paid is shown below: 
-    </p>
-    
-    <ul class="table two-column">
-        <li>
-            <p>Amount:</p>
-            <p>2.75 cents per unit</p>
-        </li>
-        <li>
-            <p>Period:</p>
-            <p>Quarter ending 30 September 2015</p>
-        </li>
-        <li>
-            <p>Payment Date:</p>
-            <p>30 October 2015</p>
-        </li>
-    </ul>
-
-    <h3>2015 Annual General Meetings</h3>
-    <p>
-        Invitations for the 2015 AGM have been mailed out to Unitholders.
-    </p>
-    <p>
-        The 2015 AGM will be held at 6pm on Tuesday 13 October at the Century Inn in Traralgon (Corner Princess Hwy and Airfield Rd).
-    </p>
-    <p>
-        For those investors who are unable to attend the Directors will also hold the following investor briefings:
-        Melbourne – 6pm Tuesday 20 October at Castlerock Offices in South Yarra (Level 4, 627 Chapel St)
-        Hobart – 5pm Thursday 22 October at the Hobart Conference Centre (Mawson Room)
-        Horsham – 2.30pm Wednesday 28 October at Green Taylor Offices in Horsham (43-45 Pynsent St)
-    </p>
-    <p>
-        For more information please contact Jason Bronts on (03) 9827 4600 or Vince Peluso on (03) 5120 1400.
-    </p>
-    </p>
     
     <h3>Distribution Reinvestment Plan</h3>
     <p>
@@ -85,6 +48,7 @@
 
     <h3>Annual General Meeting</h3>
     <p>
+        2015 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2015-AGM-Presentation.pdf">(download pdf)</a> <br />
         2014 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2014-AGM-Presentation.pdf">(download pdf)</a> <br />
         2013 AGM Presentation 
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
