--- a/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -63,6 +63,12 @@
                             <li>
                                 <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "returns", pageId = "2616B0E0-5C99-4D5E-93D2-D016998777D0" })">- Returns</a>
                             </li>
+                            <li>
+                                <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "overview", pageId = "0387304E-1962-443A-9E72-F8229F2B1215" })">- Overview</a>
+                            </li>
+                            <li>
+                                <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "key-features", pageId = "11AA518F-A437-4731-B50E-F51763D93E49" })">- Key Features</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
