--- a/trunk/Auslink/Auslink.Web.New/Views/About/Overview.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/About/Overview.cshtml
@@ -17,85 +17,4 @@
         </li>
     </ul>
 }
-
-<h2>Overview</h2>
-
-<p>
-    The main features of the Trust are summarised below.
-</p>
-
-<ul class="table two-column">
-    <li>
-        <p>
-            Investment Vehicle
-        </p>
-        <p>
-            Auslink Property Trust (Unit Trust)
-        </p>
-    </li>
-    <li>
-        <p>
-            Manager	
-        </p>
-        <p>
-            Auslink Investment Management
-        </p>
-    </li>
-    <li>
-        <p>
-            Fund Objectives
-        </p>
-        <p>
-            To develop and hold purpose-built government-leased assets located throughout Australia. <br />
-            To provide investors with a secure and growing income stream and long-term capital growth
-        </p>
-    </li>
-    <li>
-        <p>
-            Forecast Distributions
-        </p>
-        <p>
-            8.0%+
-        </p>
-    </li>
-    <li>
-        <p>
-            Forecast Tax Advantaged Portion	
-        </p>
-        <p>
-            50% for the 2015 financial year
-        </p>
-    </li>
-    <li>
-        <p>
-            Distribution Frequency	
-        </p>
-        <p>
-            Quarterly
-        </p>
-    </li>
-    <li>
-        <p>
-            Debt Strategy	
-        </p>
-        <p>
-            Target overall gearing of < 50%
-        </p>
-    </li>
-    <li>
-        <p>
-            Term of the Trust	
-        </p>
-        <p>
-            10 years commencing on 1 December 2008 or as extended by a vote of Unitholders where over 50% of Unitholders by value are in favour
-        </p>
-    </li>
-    <li>
-        <p>
-            Investors	
-        </p>
-        <p>
-            Sophisticated and Wholesale Investors
-        </p>
-    </li>
-</ul>
+@Html.Raw(ViewBag.Html)
