auslink cms stuff

--- a/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Cms/ViewPage.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Cms/ViewPage.cshtml
@@ -12,7 +12,7 @@
                 <h2>View @Model.Name</h2>
             </div>
             <div class="col-3">
-                @Html.RouteLink("Edit " + Model.Name, AdminRoutes.Cms.EditPageContent, new { }, new { @class = "btn primary right" })
+                @Html.RouteLink("Edit " + Model.Name, AdminRoutes.Cms.Page.EditPage, new { }, new { @class = "btn primary right" })
             </div>
         </div>
 
