updated castlerock website

--- a/trunk/Castlerock/Castlerock.Web.New/Content/less/site.less
+++ b/trunk/Castlerock/Castlerock.Web.New/Content/less/site.less
@@ -8,7 +8,7 @@ html { background: #5d6068; }
 body { background: #5d6068; font-size: 14px; font-family: Arial, Verdana, Helvetica, Sans-Serif; margin: 0; padding: 0; color: #5d5f67; height: 100%; }
 img { display: block; border: 0px solid #000; }
 
-h1, h2, h3 { color: #000000; margin: 0px; }
+h1, h2, h3 { color: #5d5f67; margin: 0px; font-weight: 600; }
 h1 { font-size: 20px; }
 h3 { margin: 20px 0px 0px 0px; }
 h4 { font-size: 12px; margin: 0px; padding: 0px; color: #8fbd24 }
@@ -62,9 +62,9 @@ a:hover { color : #5d6068; text-decoration: underline; }
 #main .left img.map { margin: 20px 0px 0px 20px; }
 
 #main .australia .headerImage { background: #90bd24 url(http://castlerockproperty.blob.core.windows.net/castlerock/images/australia/australia.jpg) no-repeat; }
-#main .investors .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/investors.jpg) no-repeat; }
+#main .investors .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/homepage/10.jpg) no-repeat; }
 #main .developmentExpertise .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/developmentExpertise.jpg) no-repeat; }
-#main .managementExpertise .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/managementExpertise.jpg) no-repeat; }
+#main .managementExpertise .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/homepage/12.jpg) no-repeat; }
 #main .aboutUs .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/aboutUs.jpg) no-repeat; }
 #main .contactUs .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/contactUs.jpg) no-repeat; }
 /*#main .home .headerImage { background: url(http://castlerockproperty.blob.core.windows.net/castlerock/images/home.jpg) no-repeat; }*/
