--- a/trunk/Castlerock/Castlerock.Web.New/Views/Home/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Home/Index.cshtml
@@ -17,13 +17,10 @@
         </p>
 
         <p>
-            We provide opportunities for property investors to invest in newly developed commercial offices tenanted by
-            government departments. With more than 15 years experience developing and managing government offices, we
-            understand how to successfully develop and manage property to meet the specific needs of the government sector.
+            We provide opportunities for property investors to invest in commercial offices tenanted by government departments. With more than 15 years experience developing and managing government offices, we understand how to successfully develop and manage property to meet the specific needs of the government sector.
         </p>
         <p>
-            Focusing on the development of Centrelink Customer Service Centres we have gained a unique understanding of
-            this asset class, and how to best develop and manage these assets to suit Centrelink and ensure their long-term commitment to the building.
+            Focusing on the development and management of government-leased assets, we have gained a unique understanding of this asset class, and how to best develop and manage these assets to ensure the government tenant has a long-term commitment to the building.
         </p>
 
     </div>
