--- a/trunk/Castlerock/Castlerock.Web.New/Views/Experience/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Experience/Index.cshtml
@@ -62,7 +62,7 @@
         <div class="rightColumn">
             <h3>Properties managed by Castlerock</h3>
             
-            @foreach (string state in Model.Keys)
+            @foreach (string state in Model.Keys.OrderBy(o => o))
             {
                 IList<Castlerock.Properties.Interfaces.IProperty> properties = Model[state];
             
