--- a/trunk/Castlerock/Castlerock.Web.New/Views/Investors/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Investors/Index.cshtml
@@ -20,31 +20,22 @@
                 Castlerock's simple investment structures, with government-backed tenants, are designed to have less risk than more complicated property funds. This makes them attractive to long-term investors who are seeking a stable income flow and the potential for capital growth.
             </p> 
 
-            <h3>Choice of funds</h3> 
+            <h3>Funds</h3> 
             <p> 
                 We continue to develop new portfolios of government-leased buildings, which can offer investors some flexibility in the method and timing of distribution payments. This enables investors to choose a fund they believe best suits their income needs.
             </p> 
-
-            <h3> 
-                Funds
-            </h3> 
-            <p> 
-                Castlerock’s funds invest in purpose built government-leased buildings across Australia. 
-            </p> 
-            <p> 
-                <div>Key benefits of Castlerock funds:</div> 
-                <ul> 
-                    <li>provide regular income, underpinned by the Commonwealth Government</li> 
-                    <li>feature medium- to long-term government leases</li> 
-                    <li>carry lower risk than many traditional development-driven investments</li> 
-                    <li>are designed to generate an attractive yield</li> 
-                    <li>have potential for long-term capital growth.</li> 
-                </ul> 
+            <p>
+                The objectives of our funds are to develop and purchase a portfolio of Commonwealth and State Government leased assets located throughout Australia that can provide investors with a secure and growing income stream, and long-term capital growth.
             </p>
+            <p>
+                If you are interested in finding out more about our property funds please contact us.
+            </p>
+
             
                 <h3>Partnerships</h3> 
                 <p> 
-                    We work closely with advisers, such as accountants and financial planners, to identify investors who may be interested in our funds. We provide ongoing support and regular performance reporting for fund investors.
+                    We work closely with advisers, such as accountants and financial planners, to help identify investors who may be interested in our funds. 
+                    If you have clients who may be interested in our funds please contact us for more information.
                 </p>                         
             
         </div>
