removed the managed properties from the experiance page
removed the text from the properties page

--- a/trunk/Castlerock/Castlerock.Web.New/Content/less/site.less
+++ b/trunk/Castlerock/Castlerock.Web.New/Content/less/site.less
@@ -90,9 +90,12 @@ a:hover { color : #5d6068; text-decoration: underline; }
 
 #content { margin: 20px 0px 20px 0px; width: 100%; overflow: hidden; }
 
+#contentArea { position: relative; }
+
 /* Middle Column (the pages content) */
 
-.greenColumn { float: left; width: 150px; margin-right: 25px; height: 485px; background: #90bd24; }
+.property-image { margin-left: 175px; }
+.greenColumn { width: 150px; height: 100%; background: #90bd24; position: absolute; left: 0px; top: 0px; }
 
 div.propertyHeadingContainer { width: 100%; overflow: hidden; margin: 20px 0px 10px 0px; }
 h2.propertyName { float: left; }
