--- a/trunk/Castlerock/Castlerock.Web.New/Views/Experience/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Experience/Index.cshtml
@@ -10,54 +10,128 @@
 
 <div id="content">
 
-        <div class="leftColumn">
-            <h1>
-                Management Expertise
-            </h1>
-            
-            <p>
-                We specialise in managing government-tenanted buildings around Australia.
-            </p>
-            <p>
-                <div>
-                    Our skills and experience span all areas of property management, including: 
-                </div>
-                <ul>
-                    <li>lease negotiation</li>
-                    <li>rental reviews</li>
-                    <li>tenant management</li>
-                    <li>building management</li>
-                    <li>maintenance</li>
-                    <li>reporting to property trusts.</li>
-                </ul>
-            </p>
-            <p>
-                We have developed excellent working relationships with government departments and thoroughly understand their specific needs. Because we custom design and construct government-leased buildings, we have a distinct advantage in the ongoing management of their properties. This enables us to provide investors with the highest possible return.
-            </p>
-            
-            <h1> 
-                Development Expertise
-            </h1> 
-            <p> 
-                The Castlerock team brings many years of experience to the development of government office buildings across Australia.
-            </p> 
-             
-                <p> 
-                    We are proud of our track record of delivering of profitable projects. We have the necessary expertise to provide our clients with a comprehensive service, which includes:
-                </p> 
+    <div class="leftColumn">
 
-                <ul> 
-                    <li>identifying and securing suitable sites</li> 
-                    <li>developing submissions to prospective tenants and negotiating    lease agreements</li> 
-                    <li>arranging funding and long-term finance</li> 
-                    <li>obtaining planning permits and other statutory approvals</li> 
-                    <li>designing high quality, energy efficient, cost effective buildings</li> 
-                    <li>managing the construction to ensure projects are delivered within budget    and time</li> 
-                    <li>managing the project from conception through to delivery.  </li> 
-                </ul> 
-             
-                        
-        </div>
+        <p>
+            Castlerock has over 15 years experience developing and managing government-leased office accommodation all across Australia.
+        </p>
+
+        <h3>Funds management</h3>
+
+        <p>
+            We currently manage over 50,000sqm of government tenanted office space throughout Australia, and have successfully provided our investors with secure and growing income stream from our property funds. We build long-term relationships with our government tenants and our high occupancy and retention rates are evidence of this. We operate under an Australian Financial Services Licence issued by ASIC, to comply with the prudential and disclosure requirements necessary under Australian law.
+        </p>
+
+        <h3>Property Development</h3>
+
+        <p>
+            The Castlerock team brings many years of experience to the development of government office buildings across Australia and specialises in this sector. We have successfully developed 26 office building leased to government departments and we have a proven track record for delivering projects on time and on budget. We have the necessary expertise to provide our clients with a comprehensive service, which includes:
+
+        </p>
+
+        <ul>
+            <li>
+                identifying and securing suitable sites
+            </li>
+            <li>
+                developing submissions to prospective tenants and negotiating lease agreements
+            </li>
+            <li>
+                arranging funding and long-term finance
+            </li>
+            <li>
+                obtaining planning permits and other statutory approvals
+            </li>
+            <li>
+                designing high quality, energy efficient, cost effective buildings
+            </li>
+            <li>
+                integration of the fit out design with the base building architectural and services design
+            </li>
+            <li>
+                managing the construction to ensure projects are delivered within budget and time
+            </li>
+            <li>
+                managing the project from conception through to delivery
+            </li>
+        </ul>
+
+
+        <h3>Property Management</h3>
+
+
+
+        <p>
+            Castlerock currently manages 30 properties leased to government departments. The Castlerock team has over 15 years experience managing government-leased assets and has a comprehensive understanding of the needs and requirements of the government sector. Because we custom design and construct government-leased buildings, we have a clear understanding of the ongoing facilities management of our properties. Our skills and experience span all areas of management, including:
+        </p>
+
+        <ul>
+            <li>
+                Lease management
+            </li>
+            <li>
+                Facilities management
+            </li>
+            <li>
+                Environmental performance
+            </li>
+            <li>
+                Building maintenance
+            </li>
+            <li>
+                Building and engineering services
+            </li>
+            <li>
+                Landscaping
+            </li>
+            <li>
+                Fitout services
+            </li>
+        </ul>
+
+        <h3>Environmental sustainability</h3>
+
+        <p>
+            Castlerock is aware of the benefits of incorporating sustainable design principals into our developments. We are a responsible investment and property manager and actively pursue sustainability for the benefit of all our stakeholders.
+        </p>
+
+        <p>We recognise that commercial properties have an impact upon communities and the environment. By embracing innovation and striving to continuously improve building efficiency and effectiveness, Castlerock makes a positive difference.</p>
+
+        <p>Castlerock's approach to sustainable property development aims to reduce our consumption of natural resources through:</p>
+
+        <ul>
+            <li>
+                Greater energy efficiency
+            </li>
+            <li>
+                Conserving more water
+            </li>
+            <li>
+                Reducing waste
+            </li>
+            <li>
+                Improving overall environmental performance
+            </li>
+            <li>
+                Maximise the sustainable use of resources
+            </li>
+            <li>
+                Extend durability and functionality
+            </li>
+        </ul>
+
+
+
+        <h3>Occupational Health and Safety</h3>
+
+
+
+        <p>
+            Castlerock recognises the need to provide a safe and healthy working environment and has obtained Australian Government Building and Construction OHS Accreditation from the Federal Safety Commissioner for our OH&S policy. Prior to obtaining this accreditation, Castlerock also achieved AS/NZS 4801 accreditation.
+        </p>
+
+
+    </div>
 
         <div class="rightColumn">
             
