--- a/trunk/Castlerock/Castlerock.Web.New/Views/Home/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Home/Index.cshtml
@@ -20,7 +20,8 @@
             We provide opportunities for property investors to invest in commercial offices tenanted by government departments. With more than 15 years experience developing and managing government offices, we understand how to successfully develop and manage property to meet the specific needs of the government sector.
         </p>
         <p>
-            Focusing on the development and management of government-leased assets, we have gained a unique understanding of this asset class, and how to best develop and manage these assets to ensure the government tenant has a long-term commitment to the building.
+            Focusing on the development and management of government-leased assets, we have gained a unique understanding of this asset class, 
+            and how to best develop and manage these assets to ensure the government has a long-term commitment to each building.
         </p>
 
     </div>
