--- a/trunk/Castlerock/Castlerock.Web.New/Views/Investors/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/Investors/Index.cshtml
@@ -25,7 +25,7 @@
                 We continue to develop new portfolios of government-leased buildings, which can offer investors some flexibility in the method and timing of distribution payments. This enables investors to choose a fund they believe best suits their income needs.
             </p> 
             <p>
-                The objectives of our funds are to develop and purchase a portfolio of Commonwealth and State Government leased assets located throughout Australia that can provide investors with a secure and growing income stream, and long-term capital growth.
+                The objective of our funds are to develop and purchase a portfolio of Commonwealth and State Government leased assets located throughout Australia that can provide investors with a secure and growing income stream, and long-term capital growth.
             </p>
             <p>
                 If you are interested in finding out more about our property funds please contact us.
