updated adams profile

--- a/trunk/Castlerock/Castlerock.Web.New/Views/AboutUs/Index.cshtml
+++ b/trunk/Castlerock/Castlerock.Web.New/Views/AboutUs/Index.cshtml
@@ -23,10 +23,22 @@
             <p>
                 We have successfully developed over 25 office buildings leased to government departments across Australia and we currently manage over 50,000sqm of government-leased office accommodation.
             </p>
-        </div>
+
+        </div>
     
         <div class="rightColumn">
-            <h3>Hank Bronts</h3>            <h4>Managing Director and Founder</h4>            <p>                Hank has been successfully providing asset management services to the owners of office buildings with government tenants since 1990.                 Over this time, he has developed special expertise that has enabled Castlerock to become a preferred provider in the government sector.                 During his career, Hank has developed more than 30 properties, and now oversees the management of the business            </p>            <h3>Adam Bronts</h3>            <h4>Business Development Manager</h4>            <p>                Adam is responsible for all aspects of business development at Castlerock and has been with the company for the past 14 years. His responsibilities include identifying property locations, working closely with clients to ensure the desired outcome during tender stage, purchasing land, site planning, town planning, design management and client management. Adam holds a Real Estate Agent’s License.            </p>
+            <h3>Hank Bronts</h3>
+            <h4>Managing Director and Founder</h4>
+            <p>
+                Hank has been successfully providing asset management services to the owners of office buildings with government tenants since 1990. 
+                Over this time, he has developed special expertise that has enabled Castlerock to become a preferred provider in the government sector. 
+                During his career, Hank has developed more than 30 properties, and now oversees the management of the business
+            </p>
+            <h3>Adam Bronts</h3>
+            <h4>Business Development Manager</h4>
+            <p>
+                Adam is responsible for all aspects of business development at Castlerock and has been with the company for the past 14 years. Adam has overseen the development of all projects since 2007 and has been the main contact point between all end users. He insures projects not only meet budget through design development but also meet the high expectation of future Tenants. Adam holds a Real Estate Agent’s License.
+            </p>
 
             <h3>Jason Bronts</h3>
             <h4>Chief Financial Officer</h4>
