--- a/trunk/Auslink/Auslink.Web.New/Views/Financials/FundSummary.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Financials/FundSummary.cshtml
@@ -27,107 +27,94 @@
 <ul class="table four-column">
     <li class="table-header">
         <div>Profit & Loss</div>
-        <div>30 June 2012</div>
-        <div>30 June 2013</div>
         <div>30 June 2014</div>
         <div>30 June 2015</div>
+        <div>30 June 2016</div>
     </li>
 
     <li>
         <div>Total Revenue</div>
-        <div>$1.99m</div>
-        <div>$3.46m</div>
-        <div>$5.74m</div>
-        <div>$11.50m</div>
+        <div>$5.43m</div>
+        <div>$6.29m</div>
+        <div>9.45m</div>
     </li>
 
     <li>
         <div>Total Expenses</div>
-        <div>$0.58m</div>
-        <div>$1.38m</div>
         <div>$2.45m</div>
         <div>$2.71m</div>
+        <div>$4.00m</div>
     </li>
 
     <li>
         <div>Profit</div>
-        <div>$1.41m</div>
-        <div>$2.08m</div>
-        <div>$3.29m</div>
-        <div>$8.79m</div>
+        <div>$2.98m</div>
+        <div>$3.58m</div>
+        <div>$5.45m</div>
     </li>
 
     <li>
         <div>Distributions</div>
-        <div>$0.87m</div>
-        <div>$1.57m</div>
         <div>$2.77m</div>
         <div>$3.36m</div>
+        <div>$5.19m</div>
     </li>
 
     <li>
         <div>Distributions (per unit)</div>
-        <div>9.0 cents</div>
-        <div>9.3 cents</div>
         <div>10.0 cents</div>
         <div>10.3 cents</div>
+        <div>11.0 cents</div>
     </li>
 
     <li>
         <div>Tax advantaged component</div>
         <div>100%</div>
-        <div>100%</div>
-        <div>100%</div>
         <div>68.1%</div>
+        <div>52.1%</div>
     </li>
 </ul>
 
 <ul class="table four-column">
     <li class="table-header">
         <div>Balance Sheet</div>
-        <div>30 June 2012</div>
-        <div>30 June 2013</div>
         <div>30 June 2014</div>
         <div>30 June 2015</div>
+        <div>30 June 2016</div>
     </li>
 
     <li>
         <div>Total Assets</div>
-        <div>$25.56m</div>
-        <div>$50.81m</div>
         <div>$56.97m</div>
         <div>$73.50m</div>
+        <div>$105.59m</div>
     </li>
     <li>
         <div>Total Liabilities</div>
-        <div>$11.15m</div>
-        <div>$24.94m</div>
         <div>$20.75m</div>
         <div>$24.59m</div>
+        <div>$43.89m</div>
     </li>
 
     <li>
         <div>Net Assets</div>
-        <div>$14.41m</div>
-        <div>$25.87m</div>
         <div>$36.22m</div>
         <div>$48.91m</div>
+        <div>$61.70m</div>
     </li>
 
     <li>
         <div>Total Units on Issue</div>
-        <div>12,724,199</div>
-        <div>22,451,463</div>
         <div>30,903,120</div>
         <div>37,007,255</div>
+        <div>48,908,431</div>
     </li>
 
     <li>
         <div>Gearing</div>
-        <div>39.3%</div>
-        <div>47.1%</div>
         <div>33.8%</div>
         <div>31.0%</div>
+        <div>39.4%</div>
     </li>
 </ul>
 
