--- a/trunk/Auslink/Auslink.Web.New/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Members/CurrentUnitholders.cshtml
@@ -28,15 +28,15 @@
     <h3>Distributions</h3>
     
     <p class="small-margin-bottom">
-        The forecast distribution for the 2016 and 2017 financial years is shown below:
+        The forecast distribution for the 2017 financial year is <strong>11.2 cents per unit</strong>:
     </p>
 
-    <ul class="table two-column">
+    @*<ul class="table two-column">
         <li>
             <p>FY 2016:<br />FY 2017:</p>
             <p>11 cents per unit<br />11.3 cents per unit</p>
         </li>
-    </ul>
+    </ul>*@
     
     <h3>Distribution Reinvestment Plan</h3>
     <p>
@@ -48,6 +48,7 @@
 
     <h3>Annual General Meeting</h3>
     <p>
+        2016 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2015-AGM-Presentation.pdf">(download pdf)</a> <br />
         2015 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2015-AGM-Presentation.pdf">(download pdf)</a> <br />
         2014 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2014-AGM-Presentation.pdf">(download pdf)</a> <br />
         2013 AGM Presentation 
@@ -61,6 +62,8 @@
 
     <h3>Quarterly updates</h3>
     <p>        
+        June 2016 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/quarterly-updates/quaterly-update-june-2016.pdf">(download pdf)</a> <br />
+        March 2016 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/quarterly-updates/quaterly-update-march-2016.pdf">(download pdf)</a> <br />
         December 2015 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/quarterly-updates/quaterly-update-decmber-2015.pdf">(download pdf)</a> <br />
         September 2015 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/quarterly-updates/quaterly-update-september-2015.pdf">(download pdf)</a> <br />
         June 2015 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink%20Quarterly%20Update%20-%20June%202015.pdf">(download pdf)</a> <br />
@@ -87,6 +90,7 @@
 
     <h3>Financial Reports </h3>
     <p>
+        2016 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2016-Accounts.pdf">(download pdf)</a><br />
         2015 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2015-Accounts.pdf">(download pdf)</a><br />
         2014 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2014-Accounts.pdf">(download pdf)</a><br />
         2013 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2013-Accounts.pdf">(download pdf)</a><br />
@@ -98,7 +102,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2015 financial year were mailed to unitholders in late August 2015.
+        Tax Statements for the 2016 financial year were mailed to unitholders in late August 2016.
     </p>
 
     <p>
