--- a/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Brunswick.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Brunswick.cshtml
@@ -15,13 +15,20 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>172 - 186 Moreland Rd Brunswick, VIC</p>    </li>
-    <li>        <p>Description:</p>	        <p>Two level office building with underground parking for 79 cars</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>4,218 square metres</p>    </li>
-    <li>        <p>Proposed Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>10 years + 5 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
-        <p>October 2012</p>
+        <p>Address:</p>
+        <p>172 - 186 Moreland Rd Brunswick, VIC</p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Two level office building with underground parking for 79 cars</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>4,218 square metres</p>
+    </li>
+    <li>
+        <p>Proposed Tenant:</p>
+        <p>Commonwealth Government</p>
     </li>
 </ul>
 
