--- a/trunk/Auslink/Auslink.Web.New/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
     <div class="footer">
         @Html.RouteLink("Disclaimer", "Disclaimer") &nbsp; &nbsp; 
         @Html.RouteLink("Privacy Policy", "Privacy") &nbsp; &nbsp; 
-        Copyright © 2011 Centreway Capital Ltd 
+        Copyright © 2016 Auslink Investment Mangement Ltd
     </div>
     
     @Html.Partial("GoogleAnalytics")
