--- a/trunk/Auslink/Auslink.Web.New/Views/Management/PropertyManager.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Management/PropertyManager.cshtml
@@ -19,7 +19,9 @@
 
 
 
-<h2>Development & Property Manager</h2><p>    The assets within the Trust are developed and managed by the Castlerock Property group. 
+<h2>Development & Property Manager</h2>
+<p>
+    The assets within the Trust are developed and managed by the Castlerock Property group. 
 </p>
 
 <p>
@@ -27,9 +29,12 @@
 </p>
 
 <p>
-    Castlerock has successfully secured and delivered over 20 projects for Commonwealth and State Government departments 
+    Castlerock has successfully secured and delivered over 25 projects for Commonwealth and State Government departments 
     over the past 10 years, and has earned an outstanding reputation for developing and managing property to suit the needs of the
     government sector. Over this time Castlerock has developed excellent working relationships with government 
     departments and a unique understanding of their needs and requirements. 
-</p><p>    More information on Castlerock can be found at <a href="http://www.castlerockproperty.com.au">www.castlerockproperty.com.au</a>
-</p>
+</p>
+
+<p>
+    More information on Castlerock can be found at <a href="http://www.castlerockproperty.com.au">www.castlerockproperty.com.au</a>
+</p>
