--- a/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Boronia.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Boronia.cshtml
@@ -15,13 +15,20 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>3 William St, Boronia, Vic</p>    </li>
-    <li>        <p>Description:</p>	        <p>Single level office building with underground parking for 54 cars</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>1,400 square metres</p>    </li>
-    <li>        <p>Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>7 years + 2 x 3 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
-        <p>December 2010</p>
+        <p>Address:</p>
+        <p>3 William St, Boronia, Vic</p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Single level office building with underground parking for 54 cars</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>1,400 square metres</p>
+    </li>
+    <li>
+        <p>Tenant:</p>
+        <p>Commonwealth Government</p>
     </li>
 </ul>
 
