--- a/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Glenorchy.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Glenorchy.cshtml
@@ -15,13 +15,20 @@
 
 <ul class="table two-column">
     <li>
-        <p>Address:</p>        <p>451 - 455 Main Rd Glenorchy, TAS</p>    </li>
-    <li>        <p>Description:</p>	        <p>Single level office building with parking for 28 cars</p>    </li>
-    <li>        <p>Net Lettable Area:</p>        <p>1,100 square metres</p>    </li>
-    <li>        <p>Proposed Tenant:</p>        <p>Commonwealth Government</p>    </li>
-    <li>        <p>Lease Term:</p>        <p>7 years + 2 x 3 years</p>    </li>
-    <li>        <p>Lease Commencement:</p>
-        <p>March 2015</p>
+        <p>Address:</p>
+        <p>451 - 455 Main Rd Glenorchy, TAS</p>
+    </li>
+    <li>
+        <p>Description:</p>	
+        <p>Single level office building with parking for 28 cars</p>
+    </li>
+    <li>
+        <p>Net Lettable Area:</p>
+        <p>1,100 square metres</p>
+    </li>
+    <li>
+        <p>Proposed Tenant:</p>
+        <p>Commonwealth Government</p>
     </li>
 </ul>
 
