--- a/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/AllProperties.cshtml
@@ -68,6 +68,10 @@
         <div class="left square black">13</div>
         @Html.RouteLink("Brunswick, VIC", "Brunswick")
     </li>
+    <li class="dark-grey">
+        <div class="left square black">14</div>
+        @Html.RouteLink("Mildura, VIC", "Mildura")
+    </li>
 </ul>
 
 <div class="map">
@@ -84,6 +88,7 @@
         @Html.RouteLink("10", "Goondiwindi", new { }, new { @class = "square black goondiwindi" })
         @Html.RouteLink("11", "Glenorchy", new { }, new { @class = "square black glenorchy" })
         @Html.RouteLink("12", "Warragul", new { }, new { @class = "square black warragul" })
-        @Html.RouteLink("13", "Brunswick", new { }, new { @class = "square black brunswick" })
+    @Html.RouteLink("13", "Brunswick", new { }, new { @class = "square black brunswick" })
+        @Html.RouteLink("14", "Mildura", new { }, new { @class = "square black mildura" })
 
 </div>
