--- a/trunk/Auslink/Auslink.Web.New/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                     @Html.RouteLink("Glenorchy, TAS", "Glenorchy")
                     @Html.RouteLink("Warragul, VIC", "Warragul")
                     @Html.RouteLink("Brunswick, VIC", "Brunswick")
+                    @Html.RouteLink("Mildura, VIC", "Mildura")
                 </div>
             </li>
 
