fixed the property sidenav

--- a/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Mildura.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/PropertyPortfolio/Mildura.cshtml
@@ -3,7 +3,7 @@
     ViewBag.PageId = "property-portfolio-single";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.SelectedTab = "Property Portfolio";
-    ViewBag.SelctedProperty = "Mildura Pirie";
+    ViewBag.SelctedProperty = "Mildura";
 }
 
 @section LeftNavigation{
